# MPICH

./: README.md
Barrier-Broadcast/: CMakeLists.txt  broadcast-barrier  broadcast-barrier.c  main  mpi-cmakelist.md
CMakeList Test/: broadcast-barrier.c
Collective communication/Allreduce/: Allreduce  Allreduce.c  CMakeLists.txt
Collective communication/Allreduce MPI_MIN array/: CMakeLists.txt  allreduce_min_array  allreduce_min_array.c
Collective communication/Barrier-Broadcast/: broadcast-barrier
Collective communication/Reduce MPI_MIN array/: CMakeLists.txt  reduce_min_array  reduce_min_array.c
Collective communication/Reduction/: reduction-array  reduction-array.c  reduction.c
Collective communication/Scan/: CMakeLists.txt  scan  scan.c
Collective communication/Scatter/: CMakeLists.txt
Debugging wth Varargs/: debugger.c
Hello World/: helloWorld  helloWorld.c
Non-block-one-to-many/: makefile  non-block-one-to-many  non-block-one-to-many.c
Point to Point Communication/Non-block-one-to-many/: CMakeLists.txt
Point to Point Communication/Round-Robin-Basic/: output.txt  round-robin-basic.c
Point to Point Communication/Round-Robin-Sendrecv/: output.txt  round-robin-sendrecv  sortOutput.txt  sorted.txt
Reduction/: CMakeLists.txt  reduction
Round-Robin-Basic/: round-robin-basic  round-robin-basic.c  sorted.txt
Round-Robin-Sendrecv/: round-robin-sendrecv.c
